<resources>
    <string name="app_name">SouthwestApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="sw_slogan">Without a heart, it\'s just a machine.</string>

    <!-- Layout Log in-->
    <string name="log_in_southwest">Southwest</string>
    <string name="log_in_welcome">Welcome</string>
    <string name="log_in_username_hint">Username</string>
    <string name="log_in_password_hint">Password</string>
    <string name="log_in_checkbox_title">Remember me</string>
    <string name="log_in_help">Login help?</string>
    <string name="log_in_button_title">Log in</string>
    <string name="log_in_enroll_now">Enroll now</string>
    <string name="log_in_continue_as_guest">Continue as guest</string>
    <string name="log_in_invalid_username_or_password">Invalid Username or Password</string>

    <!-- Layout Boarding Pass -->
    <string name="boarding_pass_group">Boarding \n Group</string>
    <string name="boarding_pass_position">Boarding \n Position</string>
    <string name="boarding_pass_passenger">Passenger</string>
    <string name="boarding_pass_time">BOARDING TIME</string>
    <string name="boarding_pass_info_date">Date</string>
    <string name="boarding_pass_info_departs">Departs</string>
    <string name="boarding_pass_info_gate">Gate</string>
    <string name="boarding_pass_title">Boarding Pass</string>
    <string name="boarding_pass_subtitle">DAL - MDW</string>
    <string name="boarding_pass_business_select">Business select</string>
    <string name="boarding_pass_conf_num">Conf#</string>
    
    <!-- Dialogs Boarding Pass -->
    <string name="boarding_pass_save_dialog_title">Woohoo!</string>
    <string name="boarding_pass_save_dialog_message">Your boarding pass has been saved to Photos</string>
    <string name="boarding_pass_save_dialog_yes">Return home</string>
    <string name="boarding_pass_save_dialog_no">Close</string>

    <!-- Layout Send Boarding Pass -->
    <string name="boarding_send_pass_main_info">Enter your email or phone number you would \n like to send your boarding pass to</string>
    <string name="boarding_send_pass_action">Send</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Home Page -->
    <string name="homepage_main_title">69 sale</string>
    <string name="homepage_main_title_symbol">$</string>
    <string name="homepage_sub_title">--- one-way fares ---</string>

    <string name="book_trips">Book Trips</string>
    <string name="manage_trips">Manage Trips</string>

    <string name="homepage_list_preferred">A-List Preferred</string>
    <string name="homepage_list_preferred_code">RR 1234567890</string>
    <string name="homepage_list_preferred_pts">PTS</string>
    <string name="homepage_list_preferred_value_pts">34,500</string>

    <string-array name="homepage_booking_tabs">
        <item>Book Trips</item>
        <item>Manage Trips</item>
    </string-array>

    <!-- BookingViewPagerAdapter -->

    <string-array name="booking_adapter_trips_titles">
        <item>BOOK A FLIGHT</item>
        <item>BOOK A CAR</item>
        <item>SPECIAL OFFERS</item>
    </string-array>

    <string-array name="booking_adapter_manage_titles">
        <item>CHECKIN</item>
        <item>FLIGHT STATUS</item>
        <item>CHANGE FLIGHT</item>
    </string-array>

    <!-- Layout Check In Confirmation-->
    <string name="check_in_tool_bar_title">Check In</string>
    <string name="check_in_success">You\'re checked in!</string>
    <string name="check_in_boarding">boarding group</string>
    <string name="check_in_position">position</string>
    <string name="check_in_no_boarding">Please visit a kiosk or ticket counter for your boarding passes</string>
    <string name="check_in_change_planes">Change planes</string>

    <!-- Layout Check In Search-->
    <string name="search_confirmation_number">Confirmation #</string>
    <string name="search_first_name">First name</string>
    <string name="search_last_name">Last name</string>
    <string name="search_country">Country</string>
    <string name="search_retrieve_reservation">Retrieve Reservation</string>
    <string name="search_eligible_tickets">You have %s trip(s) eligible for check in</string>
    <string name="title_activity_splash">Charlie Airlines</string>
    
    <!-- Layout Check In, Step Two -->
    <string name="check_in_warning_message">By tapping the check in button, you accept the hazardous materials transportation conditions.</string>
    <string name="check_in_button">Check In</string>
    <string name="check_in_federal_law">Federal law forbids the carriage of hazardous materials such as aerosols, fireworks, lithium batteries, and flammable liquids, aboard the aircraft in your checked or carryon baggage. E-cigarettes are not permitted in checked baggage and must be transported in carryon baggage only.</string>
    <string name="check_in_more_details">View more details</string>
    <string name="check_in_limits">Baggage weight, size &amp; limits apply.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FirstPage Fragment Information -->
    <string name="firstpage_main_title">Picture yourself here.</string>
    <string name="firstpage_sub_title">Dallas to Phoenix for as little \n as $69 one-way</string>
    <string name="firstpage_book_now">Book now</string>

    <!-- SecondPage Fragment Information -->
    <string name="secondpage_main_title_first">Fly to the</string>
    <string name="secondpage_main_title_second">Big Game</string>
    <string name="secondpage_information"> <![CDATA[  <b>  Road to Arizona </b>  <br> One-way fares from <b> $169 </b>   ]]></string>
    <string name="secondpage_sub_title_top">Road to Arizona</string>
    <string name="secondpage_sub_title_middle">One-way fares from</string>
    <string name="secondpage_sub_title_end">$169</string>

    <!-- Third Fragment Information -->
    <string name="thirdpage_main_title_second">Big Game</string>
    <string name="thirdpage_main_title_top">let</string>
    <string name="thirdpage_main_title_middle">Everyday \n Purchases</string>
    <string name="thirdpage_main_title_bottom">cover your next trip</string>
    <string name="thirdpage_details">Get details</string>

    <!--menu-->
    <string name="menu_title_cancel">Cancel</string>
    <string name="menu_title_done">Done</string>
    <string name="menu_title_close">Close</string>
    <string name="menu_title_send">Send</string>
    <string name="menu_title_save">Save</string>

    <!-- Emergency Contact -->
    <string name="emergency_contact_passanger">PASSANGER</string>
    <string name="emergency_contact_optional">EMERGENCY CONTACT (OPTIONAL)</string>
    <string name="emergency_contact_existing">SELECT EXISTING CONTACT</string>
    <string name="emergency_contact_hint_name">Name</string>
    <string name="emergency_contact_hint_number">Phone Number</string>
    <string name="emergency_contact_hint_area">+1</string>
    <string name="emergency_contact_add">Add Contact</string>
    <string name="emergency_contact_for_all_passangers">Use this emergency contact \nfor all passangers</string>
    <string name="emergency_contact_info"><![CDATA[ If you need to make changes to your passport \ninformation. You will need to visit <a href="www.southwest.com" style="text-decoration: none"> southwest.com </a> ]]></string>
    <string name="emergency_contact_use_new">Use new emergency contact</string>
    <string name="emergency_contact_continue">Continue</string>
    <string name="emergency_contact_temp_name">Kevin Thompson</string>
    <string name="emergency_contact_new_contact_success">New contact successfully created</string>
    <string name="emergency_contact_new_contact_error">Please check the fields</string>
    <string name="emergency_contact_new_toolbar_title">Emergency Contact</string>
    <string name="emergency_contact_select_toolbar_title">Emergency Contact</string>


    <!--VALIDATION SEARCH-->
    <string name="search_validation">The information is incorrect or fields are empty.</string>
    <string name="service_not_available">Location service not available</string>
    <string name="invalid_lat_long_used">Invalid Latitue/Longitude</string>
    <string name="no_address_found">Address not found</string>
    <string name="address_found">Address found</string>

    <!-- Optical Recognition -->
    <string name="progress_dialog_processing">Processing</string>
    <string name="progress_dialog_scanning">scanning</string>
    <string name="try_scan">Try Scan</string>


</resources>
