<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/airplane_check_in_background_blurred"
            android:scaleType="centerCrop"
            android:tint="#7990"
            />

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <RelativeLayout style="@style/checkInLayout">

            <TextView
                    android:id="@+id/tv_eligible_trips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/search_eligible_tickets"
                    android:visibility="gone"/>

            <LinearLayout
                    android:id="@+id/lnr_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_eligible_trips"
                    android:layout_marginTop="100dp"
                    android:padding="10dp"
                    android:orientation="vertical">

                <EditText
                        android:id="@+id/edt_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/search_confirmation_number"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"/>

                <EditText
                        android:id="@+id/edt_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/search_first_name"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"/>

                <EditText
                        android:id="@+id/edt_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/search_last_name"
                        android:padding="10dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"/>
            </LinearLayout>

            <Button
                    android:id="@+id/btn_retrieve_reservation"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    style="@style/bigButton"
                    android:text="@string/search_retrieve_reservation"
                    android:layout_below="@+id/lnr_container"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>